--- a/Aula 3 completa/style.css
+++ b/Aula 3 completa/style.css
@@ -1,8 +1,12 @@
 body {
 	background: #CCCCCC
 }
+#banner{
+	width: 100%;
+}
 h1 {
-	text-align: center
+	text-align: center;
+
 }
 p {
 	text-align: center;
