--- a/Aula 3 completa/style.css
+++ b/Aula 3 completa/style.css
@@ -1,8 +1,11 @@
 body {
-	background: #CCCCCC
+	
 }
 #banner{
 	width: 100%;
+}
+.principal {
+	background: #CCCCCC
 }
 h1 {
 	text-align: center;
@@ -17,4 +20,13 @@ p {
 
 em strong {
 	color: #FF0000;
+}
+.itens {
+	font-style: italic;
+}
+.beneficios {
+	background-color: #FFFFFF;
+}
+h2 {
+	text-align: center;
 }
