--- a/Aula 3 completa/style.css
+++ b/Aula 3 completa/style.css
@@ -5,7 +5,9 @@ body {
 	width: 100%;
 }
 .principal {
-	background: #CCCCCC
+	background: #CCCCCC;
+	padding: 30px;
+
 }
 h1 {
 	text-align: center;
@@ -23,10 +25,18 @@ em strong {
 }
 .itens {
 	font-style: italic;
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
 }
 .beneficios {
 	background-color: #FFFFFF;
+	padding: 20px;
 }
 h2 {
 	text-align: center;
+}
+.imagembeneficios {
+	width: 50%;
 }
