--- a/Aula 3 completa/produtos.css
+++ b/Aula 3 completa/produtos.css
@@ -34,3 +34,16 @@ nav a {
     width: 30%;
     vertical-align: top;
 }
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.produto-descricao {
+    font-size: 18px;
+}
+
+.preco-produto {
+    font-size: 22px;
+    font-weight: bold;
+}
