--- a/Aula 3 completa/index.css
+++ b/Aula 3 completa/index.css
@@ -5,11 +5,14 @@ body.dark-mode {
 	background-color: #333; /* cor de fundo modo escuro */
 	color: #fff; /* cor do texto modo escuro */
 }
-
 button{
 	margin-bottom: 2%;
 	border-radius: 7%;
 	
+}
+
+button:hover {
+    border-color: #c78c19;
 }
 #banner{
 	width: 100%;
