--- a/Aula 3 completa/produtos.css
+++ b/Aula 3 completa/produtos.css
@@ -23,16 +23,54 @@ nav a {
     text-decoration: none;
 
 }
+nav a:hover{
+    color:#c78c19;
+    text-decoration: underline;
+}
+
+body.dark-mode {
+	
+	background-color: #333; /* cor de fundo modo escuro */
+	color: #fff; /* cor do texto modo escuro */
+}
+
+button{
+	margin-bottom: 2%;
+	border-radius: 7%;
+	
+}
+button:hover {
+    border-color: #c78c19;
+}
 .produtos {
     width: 940px;
     margin: 0 auto;
     padding: 50px 0;
 }
 .produtos li {
+   /* background: #cccccc;*/
     display: inline-block;
     text-align: center;
     width: 30%;
     vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border-color: #000000 ;
+    /*border-width: 2px;
+    border-style: solid;*/
+    border:#000000 2px solid;
+   /* border-radius: 5%; */
+   border-radius: 10px;
+}
+.produtos li:hover {
+    border-color: #c78c19;
+}
+.produtos li:active{
+    border-color: #088c19;
+}
+.produtos li:hover h2 {
+    font-size: 34px;
 }
 .produtos h2 {
     font-size: 30px;
@@ -46,4 +84,6 @@ nav a {
 .preco-produto {
     font-size: 22px;
     font-weight: bold;
+   /* margin: 10px 0 0;*/
+    margin-top: 10px;
 }
