--- a/Aula 3 completa/produtos.css
+++ b/Aula 3 completa/produtos.css
@@ -87,3 +87,8 @@ button:hover {
    /* margin: 10px 0 0;*/
     margin-top: 10px;
 }
+footer {
+    text-align: center;
+    background: url("./img/bg.jpg");
+    padding: 40px 0 0;
+}
