--- a/Aula 3 completa/produtos.css
+++ b/Aula 3 completa/produtos.css
@@ -90,5 +90,10 @@ button:hover {
 footer {
     text-align: center;
     background: url("./img/bg.jpg");
-    padding: 40px 0 0;
+    padding: 40px 0 ;
+}
+.copyright{
+    color: #ffffff;
+    font-size: 13px;
+    margin: 20px 0 0;
 }
