--- a/Aula 3 completa/styles.css
+++ b/Aula 3 completa/styles.css
@@ -109,9 +109,12 @@ form label {
     font-size: 20px;
     margin: 0 0 10px;
 }
-form input {
+.input-padrao {
     display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
     width: 50%;
+}
+.checkbox {
+    margin: 20px 0;
 }
