--- a/Aula 3 completa/styles.css
+++ b/Aula 3 completa/styles.css
@@ -104,7 +104,7 @@ main {
 form {
     margin: 40px 0;
 }
-form label {
+form label, form legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
