--- a/Aula 3 completa/styles.css
+++ b/Aula 3 completa/styles.css
@@ -118,3 +118,32 @@ form label, form legend {
 .checkbox {
     margin: 20px 0;
 }
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: nome;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+.enviar:hover {
+    background-color: darkorange;
+    transform: scale(1.1); /*rotate(4deg)*/ 
+}
+table {
+    margin: 20px 0 40px;
+}
+thead {
+    background: #555555;
+    color:white;
+    font-weight: bold;
+}
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
+
+}
