--- a/Aula 3 completa/styles.css
+++ b/Aula 3 completa/styles.css
@@ -147,3 +147,18 @@ td, th {
     padding: 8px 15px;
 
 }
+
+.banner {
+    width: 100%;
+
+}
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 1em;
+
+
+}
+.principal p {
+    margin: 0 0 1em;
+}
