--- a/Aula 3 completa/styles.css
+++ b/Aula 3 completa/styles.css
@@ -102,8 +102,8 @@ footer {
     margin: 20px 0 0;
 }
 main {
-    width: 940px;
-    margin: 0 auto;
+   /* width: 940px;
+    margin: 0 auto; */
 }
 form {
     margin: 40px 0;
@@ -164,6 +164,13 @@ td, th {
 
 
 }
+
+.principal {
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+} 
 .principal p {
     margin: 0 0 1em;
 }
@@ -178,6 +185,46 @@ td, th {
     float: left;
     margin: 0 20px 20px 0;
 }
-.imagembeneficios {
+.mapa {
+    padding: 3em 0;
+   /* width: 940px;
+    margin: 0 auto; */
+    background: linear-gradient(#FEFEFE, #888888);
+}
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+
+}
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+.beneficios { 
+    padding: 3em 0;
+    background: #888888;
+   
+}
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto;
+}
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+.itens{
+    line-height: 1.6;
+}
+.intens:first-child {
+    font-weight: bold;
+}
+.imagem-beneficios {
     width: 60%;
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
 }
